Add SuperNexus version in OTA tool
Change-Id: I7054fc48aae456bdb7f8bfb6344863e4d4995796

--- a/core/Makefile
+++ b/core/Makefile
@@ -16,9 +16,9 @@ endif
 ifneq "" "$(filter eng.%,$(BUILD_NUMBER))"
   # BUILD_NUMBER has a timestamp in it, which means that
   # it will change every time.  Pick a stable value.
-  FILE_NAME_TAG := eng.$(USER)
+  FILE_NAME_TAG := $(SUPERNEXUS_BUILD_VERSION)
 else
-  FILE_NAME_TAG := $(BUILD_NUMBER)
+  FILE_NAME_TAG := $(SUPERNEXUS_BUILD_VERSION)
 endif
 
 is_tests_build := $(filter tests,$(MAKECMDGOALS))
@@ -1403,7 +1403,7 @@ name := $(TARGET_PRODUCT)
 ifeq ($(TARGET_BUILD_TYPE),debug)
   name := $(name)_debug
 endif
-name := $(name)-ota-$(FILE_NAME_TAG)
+name := SuperNexus-$(SUPERNEXUS_VERSION_MAJOR).$(SUPERNEXUS_VERSION_MINOR)-$(name)-$(FILE_NAME_TAG)
 
 INTERNAL_OTA_PACKAGE_TARGET := $(PRODUCT_OUT)/$(name).zip
 
